--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,3 @@
 <!DOCTYPE html><html><head><link rel="stylesheet" href="styles.css"></head><body><h1>Welcome to our web app</h1></body></html>
+-e
+<button>Upload Image</button>
